Add new recipe page and link to it from home page

--- a/recipes/chickpea-curry.html
+++ b/recipes/chickpea-curry.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Chickpea Curry</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/chickpea-curry.html">Chickpea Curry</a>
+    <h1>Chickpea Curry</h1>
 </body>
 </html>
