--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chickpea-curry.html">Chickpea Curry</a>
+    <ul>
+        <li><a href="recipes/chickpea-curry.html">Chickpea Curry</a></li>
+        <li><a href="recipes/fish-finger-bhorta.html">Fish Finger Bhorta</a></li>
+    </ul>
 </body>
 </html>
