Add new recipe page and link to it from home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/chickpea-curry.html">Chickpea Curry</a></li>
         <li><a href="recipes/fish-finger-bhorta.html">Fish Finger Bhorta</a></li>
+        <li><a href="recipes/chicken-burrito-bowl.html">Fajita Chicken Burrito Bowl</a></li>
     </ul>
 </body>
 </html>
