Correct typo in chicken burrito bowl recipe

--- a/recipes/chicken-burrito-bowl.html
+++ b/recipes/chicken-burrito-bowl.html
@@ -30,7 +30,7 @@
     <h2>Instructions</h2>
     <ol>
         <li>In a large shallow bowl combine lime juice, oil, garlic, cumin, chilli flakes, corainder, salt & pepper. Mix together.</li>
-        <li>Add the sliced chicken thighs and mix so that the chicken is well-coated. Marinate to 30 minutes.</li>
+        <li>Add the sliced chicken thighs and mix so that the chicken is well-coated. Marinate for 30 minutes.</li>
         <li>Heat a large pan on medium-high heat and add the oil. Add the chicken and sear until golden and cooked through. Transfer to a warm plate.</li>
         <li>Add the peppers to the pan and cook until soft and slightly charred. Season with salt and pepper.</li>
         <li>Arrange the other ingredients into bowls along with rice that has been cooked to your taste.</li>
