Add basic text and image styles to all pages

--- a/recipes/chicken-burrito-bowl.html
+++ b/recipes/chicken-burrito-bowl.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Fajita Chicken Burrito Bowl</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>This fajita chicken burrito bowl is healthy, flavourful and can be put together quickly. It's perfect to meal prep for lunches through the week.</p>
     <h2>Ingredients</h2>
-    <p>Serves 2</p>
+    <p class="portion">Serves 2</p>
     <ul>
         <li>2tbsp freshly squeezed lime juice</li>
         <li>2 tbsp olive oil</li>
