--- a/recipes/chickpea-curry.html
+++ b/recipes/chickpea-curry.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Chickpea Curry</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>This rich, creamy and satisfying chickpea curry has amazing flavour and is so quick to make. Perfect for a healthy weeknight meal or to prepare ahead. It's plant-based, gluten and dairy free!</p>
     <h2>Ingredients</h2>
-    <p>Serves 2</p>
+    <p class="portion">Serves 2</p>
     <ul>
         <li>240g tinned chickpeas</li>
         <li>200ml coconut milk</li>
