--- a/recipes/fish-finger-bhorta.html
+++ b/recipes/fish-finger-bhorta.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Fish FInger Bhorta</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>This dish offers ultimate comfort with a surprisingly unconvetional use of the humble fish finger.</p>
     <h2>Ingredients</h2>
-    <p>Serves 2</p>
+    <p class="portion">Serves 2</p>
     <ul>
         <li>1/2 red onion</li>
         <li>Splash of red wine vinger</li>
