--- a/recipes/fish-finger-bhorta.html
+++ b/recipes/fish-finger-bhorta.html
@@ -33,8 +33,8 @@
         <li>Make the pickled onions at least 2 hours in advance. Cut the red onion into half-moons, place them in a bowl or jar. Pour over red wine vinegar, ensuring that the onions are fully immersed.</li>
         <li>Heat the oven to 220C/200C Fan/425F.</li>
         <li>Peel and slice the white onions into half moons, deseed the chillies and slice them finely. Peel the garlic and grate it finely.</li>
-        <li>Place the fish fingers on a baking sheet and cook in the over for approx. 20-25 minutes. This may be slightly longer than the packet instructions, but we want the breadcrumb coating to be really crisp.</li>
-        <li>Meanwhile, warm the oil in a large frying pan and cook the onions oven medium-low heat for 20 minutes, stirring regularly until they are pale golden and soft.</li>
+        <li>Place the fish fingers on a baking sheet and cook in the oven for approx. 20-25 minutes. This may be slightly longer than the packet instructions, but we want the breadcrumb coating to be really crisp.</li>
+        <li>Meanwhile, warm the oil in a large frying pan and cook the onions over medium-low heat for 20 minutes, stirring regularly until they are pale golden and soft.</li>
         <li>Add the chillies and cook, stirring continuously for 3 minutes. Then stir in the grated ginger and garlic for another 2 minutes.</li>
         <li>Spoon in the mustard and salt, stirring to combine. Then add the spinach leaves and let them wilt in the pan for 2-3 minutes, stirring regularly. Then squeeze in the juice of the lime.</li>
         <li>Take the pan off the heat and remove the fish fingers from the oven. Break up the fish fingers up a bit with a spatula and add them to the pan. Toss everything together, breaking up the fish fingers further, then sprinkle over the coriander.</li>
